--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="./js/app.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg  navbar-dark fixed-top   " >
+  <nav class="navbar navbar-expand-lg  navbar-dark  fixed-top" >
       <div class="container ">
       <a class="navbar-brand fs-3 fw-bold   " href="#Acceuil"  id="logo">H.E.A</a>
       <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
@@ -362,14 +362,14 @@
     <p class=" text-light mt-md-5"><i class="fas fa-copyright   me-3  "></i>Copyright H.S.A</p>
   </div>
   <div class="col-md-4 row   p-4 ">
-    <p class="text-light text-center"><i class="fas fa-location-dot text-primary"></i> 09 RUE RYAD MIFTAH EL KHIR SAFI</p>
-    <p class="text-light text-center"><i class="fas fa-envelope text-primary"></i>hossamabouelqassim@gmail.com</p>
-    <p class="text-light text-center"><i class="fas fa-phone text-primary"></i>0647277414</p>
+    <p class="text-light text-center"><i class="fas fa-location-dot text-light me-1"></i> 09 RUE RYAD MIFTAH EL KHIR SAFI</p>
+    <p class="text-light text-center"><i class="fas fa-envelope text-light me-1"></i>hossamabouelqassim@gmail.com</p>
+    <p class="text-light text-center"><i class="fas fa-phone text-light me-1"></i>0647277414</p>
 
   </div>
   <div class="col-md-4   text-center  mt-sm-2  ">
     <a class="btn btn-outline-light mt-md-4 " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"> Social Media </a>
-
+    
   </div>
 </div>
   
